--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "cloudinary": "^2.9.0",
+    "html-to-image": "^1.11.13",
     "next": "16.1.2",
     "react": "19.2.3",
     "react-dom": "19.2.3"
